--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -7,8 +7,8 @@ dataSources:
     name: AirdropFactory
     network: mumbai
     source:
-      address: "0x7e8A8ca46082e74c73428125Fe23885d670E94fb"
       abi: AirdropFactory
+      address: "0x7e8A8ca46082e74c73428125Fe23885d670E94fb"
       startBlock: 36379103
     mapping:
       kind: ethereum/events
@@ -27,8 +27,9 @@ dataSources:
     name: Verifier
     network: mumbai
     source:
-      address: "0xFf35245e620d63d8C364f253d8D85eF1E74F6f73"
       abi: Verifier
+      address: "0xFf35245e620d63d8C364f253d8D85eF1E74F6f73"
+      startBlock: 36379232
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
