--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,12 +17,15 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "graphql": "^16.6.0",
+    "graphql-request": "^6.1.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
     "styled-jsx": "^5.1.2",
+    "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "viem": "^0.3.49",
