--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -5,9 +5,9 @@
     "codegen": "graph codegen",
     "build": "graph build",
     "build:mumbai": "graph codegen && graph build --network mumbai",
-    "build:mainnet": "graph codegen && graph build --network mainnet",
+    "build:matic": "graph codegen && graph build --network matic",
     "deploy:mumbai": "yarn build:mumbai && graph deploy --product hosted-service rafinskipg/humandrop-mumbai --network mumbai",
-    "deploy:mainnet": "yarn build:mainnet && graph deploy --product hosted-service humandrop/subgraph --network polygon",
+    "deploy:matic": "yarn build:matic && graph deploy --product hosted-service rafinskipg/humandrop-polygon --network matic",
     "create-local": "graph create --node http://localhost:8020/ humandrop/subgraph",
     "remove-local": "graph remove --node http://localhost:8020/ humandrop/subgraph",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 humandrop/subgraph",
