--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -5,11 +5,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: AirdropFactory
-    network: mumbai
+    network: matic
     source:
       abi: AirdropFactory
-      address: "0x79C4cfeD4F8ce114E4f0cF8505a0393aC69006d9"
-      startBlock: 36379103
+      address: "0x8b84f8169cb2429F538475404f758E33BC9EFDCF"
+      startBlock: 43499539
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -25,11 +25,11 @@ dataSources:
       file: ./src/airdrop-factory.ts
   - kind: ethereum
     name: Verifier
-    network: mumbai
+    network: matic
     source:
       abi: Verifier
-      address: "0xEa390058e26A66eFd22b6E6B6f7f97A559481FBe"
-      startBlock: 36379232
+      address: "0xFf35245e620d63d8C364f253d8D85eF1E74F6f73"
+      startBlock: 43499494
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -49,7 +49,7 @@ dataSources:
 templates:
   - kind: ethereum
     name: Airdrop
-    network: mumbai
+    network: matic
     source:
       abi: Airdrop
     mapping:
